# mcp-oxide

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml
config/: gateway.example.yaml  policies.yaml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/authz/: Cargo.toml
crates/authz/src/: lib.rs  yaml_rbac.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  audit.rs  error.rs  identity.rs  lib.rs  policy.rs  providers.rs  session.rs  tool.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: docker.rs  image_ref.rs  lib.rs  noop.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs  reconciler.rs  routes.rs  state.rs
crates/gateway/src/routes/: control_plane.rs  control_plane_helpers.rs  data_plane.rs  data_plane_helpers.rs  health.rs  tool_router.rs  validation.rs
crates/gateway/tests/: control_plane_it.rs  e2e_it.rs  proxy_it.rs
crates/identity/: Cargo.toml
crates/identity/src/: claims.rs  lib.rs  oidc.rs  static_jwt.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: jsonrpc.rs  lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  memory.rs  sql.rs
crates/metadata/tests/: sqlite_it.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/src/: fixture.rs  lib.rs  mock.rs
deploy/: Dockerfile  docker-compose.yaml
deploy/helm/mcp-oxide/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
deploy/helm/mcp-oxide/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  hpa.yaml  httproute.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
deploy/helm/mcp-oxide/templates/tests/: test-connection.yaml
deploy/smoke/: Dockerfile.mock-mcp  docker-compose.yaml  gateway.yaml  jwt.key  policies.yaml
deploy/smoke/fixtures/: admin.yaml  echo.yaml  public.yaml
docs/adr/: ADR-001-two-plane-architecture.md  ADR-002-provider-model.md  ADR-003-mcp-transport.md  ADR-004-kubernetes-deployment.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  storage.ts  styles.css  types.ts
openapi/: mcp-oxide.openapi.yaml
tests/smoke/: README.md
