[package]
name = "mcp-oxide-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audit sinks (stdout, file, object-store, kafka, nats, postgres) for mcp-oxide"

[lints]
workspace = true

[features]
default = ["stdout"]
stdout = []
file = []
object-store = []
kafka = []
nats = []
postgres = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
