[package]
name = "mcp-oxide-authz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authorization engines (YAML RBAC, OPA, Cedar) for mcp-oxide"

[lints]
workspace = true

[features]
default = []
yaml-rbac = []
opa-sidecar = []
cedar-embedded = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
