[package]
name = "mcp-oxide-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types and provider traits for mcp-oxide"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
bytes.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
