[package]
name = "mcp-oxide-deployment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deployment providers (Kubernetes, Docker, Nomad, process, noop-external) for mcp-oxide"

[lints]
workspace = true

[features]
default = ["noop-external"]
kubernetes = []
docker = ["bollard"]
nomad = []
process = []
noop-external = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

bollard = { workspace = true, optional = true }
