[package]
name = "mcp-oxide-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "mcp-oxide gateway binary"

[[bin]]
name = "mcp-oxide"
path = "src/main.rs"

[lib]
name = "mcp_oxide_gateway"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["docker"]
docker = ["mcp-oxide-deployment/docker"]

[dependencies]
mcp-oxide-core.workspace = true
mcp-oxide-mcp.workspace = true
mcp-oxide-identity = { workspace = true, features = ["oidc-generic", "static-jwt"] }
mcp-oxide-authz = { workspace = true, features = ["yaml-rbac"] }
mcp-oxide-deployment = { workspace = true, features = ["noop-external"] }
mcp-oxide-metadata = { workspace = true, features = ["in-memory", "sqlite"] }
mcp-oxide-session.workspace = true
mcp-oxide-secrets.workspace = true
mcp-oxide-audit.workspace = true
mcp-oxide-observability.workspace = true

async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
uuid.workspace = true
time.workspace = true
chrono.workspace = true
reqwest.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
mcp-oxide-testing.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "net"] }
