[package]
name = "mcp-oxide-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity providers (OIDC, static JWT, header-passthrough) for mcp-oxide"

[lints]
workspace = true

[features]
default = []
oidc-generic = []
static-jwt = []
header-passthrough = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
