[package]
name = "mcp-oxide-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Identity providers (OIDC, static JWT, header-passthrough) for mcp-oxide"

[lints]
workspace = true

[features]
default = ["oidc-generic", "static-jwt"]
oidc-generic = ["dep:reqwest", "dep:tokio"]
static-jwt = []
header-passthrough = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
futures.workspace = true
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
