[package]
name = "mcp-oxide-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Metadata store implementations for mcp-oxide"

[lints]
workspace = true

[features]
default = ["in-memory"]
in-memory = []
postgres = ["sqlx", "sqlx/postgres"]
sqlite = ["sqlx", "sqlx/sqlite"]
redis = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "chrono", "macros", "json"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true }
