[package]
name = "mcp-oxide-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracing, metrics, and logging wiring for mcp-oxide"

[lints]
workspace = true

[features]
default = ["json-logs", "prometheus"]
json-logs = []
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]
otlp = []

[dependencies]
mcp-oxide-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
