[package]
name = "mcp-oxide-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Secret providers (env, file, k8s, vault, aws-sm, gcp-sm, azure-kv) for mcp-oxide"

[lints]
workspace = true

[features]
default = ["env"]
env = []
file = []
k8s = []
vault = []
aws-sm = []
gcp-sm = []
azure-kv = []

[dependencies]
mcp-oxide-core.workspace = true
async-trait.workspace = true
tracing.workspace = true
