[package]
name = "mcp-oxide-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock MCP servers and test helpers for mcp-oxide."
publish = false

[lints]
workspace = true

[[bin]]
name = "mock-mcp"
path = "src/bin/mock_mcp.rs"

[lib]
name = "mcp_oxide_testing"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
anyhow.workspace = true
http.workspace = true
parking_lot.workspace = true
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
reqwest.workspace = true
